deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabolic-ninja-staging
spec:
  selector:
    matchLabels:
      app: metabolic-ninja
      env: staging
  replicas: 1
  template:
    metadata:
      labels:
        app: metabolic-ninja
        env: staging
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/metabolic-ninja:devel
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["/bin/sh", "-c"]
        args: ["flask db upgrade && gunicorn -c gunicorn.py metabolic_ninja.wsgi:app"]
        readinessProbe:
          httpGet:
            path: /pathways-caffeine/healthz
            port: 8000
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
      - name: worker
        image: gcr.io/dd-decaf-cfbf6/metabolic-ninja:devel
        imagePullPolicy: Always
        command: ["celery", "-A", "metabolic_ninja.tasks", "worker", "--loglevel=info"]
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "4000m"
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
        command: ["redis-server", "--save 900 1", "--save 300 10"]
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
        volumeMounts:
          - mountPath: "/data"
            name: metabolic-ninja-staging
      - name: flower
        image: gcr.io/dd-decaf-cfbf6/metabolic-ninja:devel
        imagePullPolicy: Always
        ports:
        - containerPort: 5555
        command: ["celery", "flower", "-A", "metabolic_ninja", "--broker=redis://localhost:6379/0", "--url_prefix=/metabolic-ninja", "--basic_auth=$(FLOWER_USERNAME):$(FLOWER_PASSWORD)"]
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
      - name: disk-usage
        image: gcr.io/dd-decaf-cfbf6/metabolic-ninja:devel
        command: ["python", "-m", "disk_usage.main"]
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
        volumeMounts:
          - mountPath: "/data"
            name: metabolic-ninja-staging
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy", "-instances=dd-decaf-cfbf6:europe-west1:dd-decaf=tcp:5432", "-credential_file=/secrets/cloudsql/credentials.json"]
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
        - name: metabolic-ninja-staging
          persistentVolumeClaim:
           claimName: metabolic-ninja-staging
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
