deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metabolic-ninja-caffeine
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api-staging.dd-decaf.eu
    - flower.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: api-staging.dd-decaf.eu
    http:
      paths:
      - path: /pathways-caffeine
        backend:
          serviceName: metabolic-ninja-caffeine
          servicePort: 80
  - host: flower.dd-decaf.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: metabolic-ninja-caffeine
          servicePort: 5555
